--- a/_config.yml
+++ b/_config.yml
@@ -86,4 +86,6 @@ exclude:
   - README.md
   - CNAME
 
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/midnight@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
