--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ name: Z. Yu' Blog
 description: Notes along with my research, particularly on computational methods, molecular dynamics, machine learning, etc. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars.githubusercontent.com/u/75448916?s=48&v=4
+# avatar: 
+profile: https://avatars.githubusercontent.com/u/75448916?s=48&v=4
 
 #
 # Flags below are optional
